# skgit

./: Cargo.toml  LICENSE  README.md  test-journal.json
.github/workflow/: actions.yaml
.github/workflows/: actions.yaml
src/: add.rs  checkout.rs  cli.rs  find.rs  main.rs  status.rs
src/common/: command.rs  find.rs  mod.rs  status.rs  tasks.rs
