[package]
name = "skgit"
authors = ["Shumpei Murakami <murashun982@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "useful cli tool for git basic command"
documentation = "https://github.com/Mr-peipei/skgit"
repository = "https://github.com/Mr-peipei/skgit"
homepage = "https://github.com/Mr-peipei/skgit"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
skim="0.10.2"
anyhow="1.0"  
home="0.5"
serde_json = "1.0"    # Add serde_json.
structopt = "0.3"


[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"